--- a/home.html
+++ b/home.html
@@ -5,7 +5,7 @@
   <title>Title</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,700,600&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" href="css/style.min.css"/>
+  <link rel="stylesheet" href="css/style.css?timestamp=1473076169897"/>
   <script src="js/ie-detector.js"></script>
   <script src="js/modernizr.js"></script>
   <!--[if lte IE 9]><meta http-equiv="X-UA-Compatible" content="IE=edge"/><![endif]-->
@@ -233,82 +233,117 @@
                     <div class="title-section row">
                         <h2 class="col-sm-12">Профессии</h2>
                     </div>
-                    <div class="row">
-                        <div class="col-sm-12 wrapper-tabs">
-                            <div id="first-tab-group" class="tabgroup">
-                                <div id="tab1" class="wrapper-tabs-item">
+                </div>
+                <div class="wrapper-tabs">
+                    <div id="first-tab-group" class="tabgroup">
+                        <div id="tab1" class="wrapper-tabs-item" style="background-image: url(images/home-bg1.jpg);">
+                            <div class="container">
+                                <div class="row">
+
                                     <div class="col-md-8">
-                                        <div class="img-wrap" style="background-image: url(images/tabs-img.png);">
+                                        <div class="img-wrap">
                                             <p><b>Big Data Scientist</b> - профессия будущего.</p>
                                         </div>
                                     </div>
                                     <div class="col-md-4">
                                         <h2>Специалист по машинному
                                             обучению</h2>
-                                        <p class="style-text-tab">Профессия data scientist отмечается как одна из самых перспективных в мире. Число
+                                        <p class="style-text-tab">Профессия data scientist отмечается как одна из самых
+                                            перспективных в мире. Число
                                             вакансий в этом направлении растёт по экспоненте.
                                         </p>
-                                        <p class="style-text-tab">По расчётам McKinsey Global Institute к 2018 годупонадобится дополнительно 190
+                                        <p class="style-text-tab">По расчётам McKinsey Global Institute к 2018
+                                            годупонадобится дополнительно 190
                                             тысяч специалистов по данным.</p>
-                                        <p class="style-text-tab"><a class="el-btn pur-style" href="#">Подробнее о профессии</a></p>
+                                        <p class="style-text-tab"><a class="el-btn pur-style" href="#">Подробнее о
+                                            профессии</a></p>
                                     </div>
                                 </div>
-                                <div id="tab2" class="wrapper-tabs-item">
+                            </div>
+                        </div>
+                        <div id="tab2" class="wrapper-tabs-item" style="background-image: url(images/tabs-img.png);">
+                            <div class="container">
+                                <div class="row">
                                     <div class="col-md-8">
-                                        <div class="img-wrap" style="background-image: url(images/tabs-img.png);">
+                                        <div class="img-wrap">
                                             <p><b>Big Data Scientist</b> - профессия будущего.</p>
                                         </div>
                                     </div>
                                     <div class="col-md-4">
                                         <h2>Big Data Analyst</h2>
-                                        <p class="style-text-tab">Профессия data scientist отмечается как одна из самых перспективных в мире. Число
+                                        <p class="style-text-tab">Профессия data scientist отмечается как одна из самых
+                                            перспективных в мире. Число
                                             вакансий в этом направлении растёт по экспоненте.
                                         </p>
-                                        <p class="style-text-tab">По расчётам McKinsey Global Institute к 2018 годупонадобится дополнительно 190
+                                        <p class="style-text-tab">По расчётам McKinsey Global Institute к 2018
+                                            годупонадобится дополнительно 190
                                             тысяч специалистов по данным.</p>
-                                        <p class="style-text-tab"><a class="el-btn pur-style" href="#">Подробнее о профессии</a></p>
+                                        <p class="style-text-tab"><a class="el-btn pur-style" href="#">Подробнее о
+                                            профессии</a></p>
                                     </div>
                                 </div>
-                                <div id="tab3" class="wrapper-tabs-item">
+                            </div>
+
+                        </div>
+                        <div id="tab3" class="wrapper-tabs-item" style="background-image: url(images/tabs-img.png);">
+                            <div class="container">
+                                <div class="row">
                                     <div class="col-md-8">
-                                        <div class="img-wrap" style="background-image: url(images/tabs-img.png);">
+                                        <div class="img-wrap">
                                             <p><b>Big Data Scientist</b> - профессия будущего.</p>
                                         </div>
                                     </div>
                                     <div class="col-md-4">
                                         <h2>Data Scientist в фармакологии</h2>
-                                        <p class="style-text-tab">Профессия data scientist отмечается как одна из самых перспективных в мире. Число
+                                        <p class="style-text-tab">Профессия data scientist отмечается как одна из самых
+                                            перспективных в мире. Число
                                             вакансий в этом направлении растёт по экспоненте.
                                         </p>
-                                        <p class="style-text-tab">По расчётам McKinsey Global Institute к 2018 годупонадобится дополнительно 190
+                                        <p class="style-text-tab">По расчётам McKinsey Global Institute к 2018
+                                            годупонадобится дополнительно 190
                                             тысяч специалистов по данным.</p>
-                                        <p class="style-text-tab"><a class="el-btn pur-style" href="#">Подробнее о профессии</a></p>
+                                        <p class="style-text-tab"><a class="el-btn pur-style" href="#">Подробнее о
+                                            профессии</a></p>
                                     </div>
                                 </div>
-                                <div id="tab4" class="wrapper-tabs-item">
+                            </div>
+
+                        </div>
+                        <div id="tab4" class="wrapper-tabs-item" style="background-image: url(images/tabs-img.png);">
+                            <div class="container">
+                                <div class="row">
                                     <div class="col-md-8">
-                                        <div class="img-wrap" style="background-image: url(images/tabs-img.png);">
+                                        <div class="img-wrap">
                                             <p><b>Big Data Scientist</b> - профессия будущего.</p>
                                         </div>
                                     </div>
                                     <div class="col-md-4">
                                         <h2>Busines Intelligence Analyst</h2>
-                                        <p class="style-text-tab">Профессия data scientist отмечается как одна из самых перспективных в мире. Число
+                                        <p class="style-text-tab">Профессия data scientist отмечается как одна из самых
+                                            перспективных в мире. Число
                                             вакансий в этом направлении растёт по экспоненте.
                                         </p>
-                                        <p class="style-text-tab">По расчётам McKinsey Global Institute к 2018 годупонадобится дополнительно 190
+                                        <p class="style-text-tab">По расчётам McKinsey Global Institute к 2018
+                                            годупонадобится дополнительно 190
                                             тысяч специалистов по данным.</p>
-                                        <p class="style-text-tab"><a class="el-btn pur-style" href="#">Подробнее о профессии</a></p>
+                                        <p class="style-text-tab"><a class="el-btn pur-style" href="#">Подробнее о
+                                            профессии</a></p>
                                     </div>
                                 </div>
                             </div>
-                            <ul class="tabs clearfix" data-tabgroup="first-tab-group">
-                                <li><a href="#tab1" class="active">Big Data Scientist <i class="icon-angle-right"></i></a></li>
-                                <li><a href="#tab2">Big Data Analyst  <i class="icon-angle-right"></i></a></li>
-                                <li><a href="#tab3">Data Scientist в фармакологии <i class="icon-angle-right"></i></a></li>
-                                <li><a href="#tab4">Busines Intelligence Analyst <i class="icon-angle-right"></i></a></li>
-                            </ul>
+
                         </div>
+                    </div>
+                    <div class="container">
+                        <ul class="tabs clearfix" data-tabgroup="first-tab-group">
+                            <li><a href="#tab1" class="active">Big Data Scientist <i
+                                    class="icon-angle-right"></i></a></li>
+                            <li><a href="#tab2">Big Data Analyst <i class="icon-angle-right"></i></a></li>
+                            <li><a href="#tab3">Data Scientist в фармакологии <i class="icon-angle-right"></i></a>
+                            </li>
+                            <li><a href="#tab4">Busines Intelligence Analyst <i class="icon-angle-right"></i></a>
+                            </li>
+                        </ul>
                     </div>
                 </div>
             </section>
@@ -534,8 +569,8 @@
 
 <!-- scripts -->
 <script src="js/libs.js"></script>
-
-<script src="js/common.js"></script>
-
+<script src="js/core.js"></script>
+<script src="js/common.js?timestamp=1473076169897"></script>
+<script src="//localhost:35729/livereload.js"></script>
 </body>
 </html>
